Check DevTool's BypassServiceWorker flag in browser process for PlzNavigate.

Bug: 746220
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: Id6158d90b700cdbd4014391aee7dcf3a52c4a2ff
Reviewed-on: https://chromium-review.googlesource.com/735163
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511305}
Former-commit-id: a66f196008bfe9e895a91a9a66dc56909c4b7614