content/browser/devtools/render_frame_devtools_agent_host.cc
@@ -414,6 +414,20 @@ void RenderFrameDevToolsAgentHost::AppendDevToolsHeaders(
 }
 
 // static
+bool RenderFrameDevToolsAgentHost::ShouldBypassServiceWorker(
+    FrameTreeNode* frame_tree_node) {
+  frame_tree_node = GetFrameTreeNodeAncestor(frame_tree_node);
+  RenderFrameDevToolsAgentHost* agent_host = FindAgentHost(frame_tree_node);
+  if (!agent_host)
+    return false;
+  for (auto* network : protocol::NetworkHandler::ForAgentHost(agent_host)) {
+    if (network->ShouldBypassServiceWorker())
+      return true;
+  }
+  return false;
+}
+
+// static
 void RenderFrameDevToolsAgentHost::WebContentsCreated(
     WebContents* web_contents) {
   if (ShouldForceCreation()) {
